@@ -1128,7 +1128,7 @@
  #--------------------------------------------------------[ Episodes Array ]---
   /** Get the series episode(s)
    * @method episodes
-   * @return array episodes (array[0..n] of array[0..m] of array[imdbid,title,airdate,plot])
+   * @return array episodes (array[0..n] of array[0..m] of array[imdbid,title,airdate,plot,season,episode])
    * @see IMDB page /episodes
    */
   public function episodes() {
@@ -1137,8 +1137,10 @@
       if ( $this->page["Episodes"] == "" ) $this->openpage("Episodes");
       if ( $this->page["Episodes"] == "cannot open page" ) return array(); // no such page
       if ( preg_match_all('!<h3>Season (\d+), Episode (\d+): <a href="/title/tt(\d{7})/">(.*)</a></h3><span.*>Original Air Date.*<strong>(.*)</strong></span><br>\s*(.*)(<h5>|</td>)!Ui',$this->page["Episodes"],$matches) ) {
-	for ( $i = 0 ; $i < count($matches[0]); $i++ ) {
-          $this->season_episodes[$matches[1][$i]][$matches[2][$i]] = array("imdbid" => $matches[3][$i],"title" => $matches[4][$i], "airdate" => $matches[5][$i], "plot" => $matches[6][$i]);
+        for ( $i = 0 ; $i < count($matches[0]); $i++ ) {
+          $this->season_episodes[$matches[1][$i]][$matches[2][$i]] = array(
+              "imdbid" => $matches[3][$i],"title" => $matches[4][$i], "airdate" => $matches[5][$i],
+              "plot" => $matches[6][$i], "season" => $matches[1][$i],"episode" => $matches[2][$i]);
         }
       }
     }
