@@ -10,6 +10,7 @@ v2.0.6
 * imdb::awards(): minor adjustments by Qvist
 ! imdb_movielist: fixed the listing methods (were all broken by IMDB site changes some time ago)
 + movies (imdb+pilot): Added new method languages_detailed() to get detailed lang info (name, code and comment of languages used)
++ imdb::episodes(): Result array now also includes season and episode (numbers)
 
 v2.0.5 (25.05.2011)
 -------------------
